--- a/Hamstore/app/src/main/AndroidManifest.xml
+++ b/Hamstore/app/src/main/AndroidManifest.xml
@@ -13,20 +13,23 @@
         android:theme="@style/Theme.Hamstore"
         tools:targetApi="31">
         <activity
+            android:name=".test_login"
+            android:exported="true" />
+        <activity
             android:name=".AC_dang_ki"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".AC_dang_nhap"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".TrangChu"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".AC_ChiTiet"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true" />-->
         <activity
             android:name=".AC_Chao"
             android:exported="true">
