--- a/Hamstore/app/src/main/AndroidManifest.xml
+++ b/Hamstore/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
+            android:name=".TrangChu_Admin"
+            android:exported="false" />
+        <activity
             android:name=".AC_thanh_toan"
             android:exported="false" />
         <activity
